--- a/leumi-project/src/flask/Jenkinsfile
+++ b/leumi-project/src/flask/Jenkinsfile
@@ -9,7 +9,10 @@ pipeline {
             steps { 
                 withCredentials([usernamePassword(credentialsId: 'berchakuwa', passwordVariable: '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', usernameVariable: 'GIT_USERNAME')]) {
                     sh '''
-                         git clone https://github.com/Olka0/project-leimi-bank.git
+                        git config --global user.name berchakuwa
+                        git config --global user.email berchakuwa@gmail.com
+                        git config -l
+                        git clone https://github.com/Olka0/project-leimi-bank.git
                        '''
                   }
             }
