--- a/leumi-project/src/flask/Jenkinsfile
+++ b/leumi-project/src/flask/Jenkinsfile
@@ -9,7 +9,7 @@ pipeline {
             steps { 
                  sh '''
                         git config --global user.name berchakuwa
-                        git config --global user.email berchakuwa@gmail.com
+                        git config --global user.email berchakuwa@github.com
                         git config -l
                     '''
                 withCredentials([usernamePassword(credentialsId: '0a987b06-ae29-4f7e-91b3-a9de0e38aa00', passwordVariable: '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', usernameVariable: 'GIT_USERNAME')]) {
